Refactor CSS file paths for templates

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="css/thaw-flex.css" type="text/css" />
         <link rel="stylesheet" href="css/font.css" type="text/css" />
         <link rel="stylesheet" href="css/fontawesome.min.css" type="text/css" />
-        <link rel="stylesheet" href="css/style.css" type="text/css" />
+        <link rel="stylesheet" href="style.css" type="text/css" />
         <link rel="stylesheet" href="css/responsive.css" type="text/css" />
         <link rel="icon" href="img/fav-icon.png">
         <script>
@@ -103,16 +103,14 @@
                             </div>
                             <div class="about-text">
                                 <div class="the-title">
-                                    <h5 class="head-title-2" data-aos="fade-up"> / STORY </h5>
-                                    <h2 class="head-title-1"> Brief About US
+                                    <h5 class="head-title-2" data-aos="fade-up"> / Información </h5>
+                                    <h2 class="head-title-1"> Sobre Nosotros
                                         <span class="title-end">.</span></h2>
                                 </div>
                                 <div class="the-text grid grid-cols-12 gap-24">
-                                    <p class="col-span-4 sm:col-span-12 res:col-span-12">
-                                        For each project we establish relationships with partners who we know will help us create added value for your project. As well as bringing together the public and private sectors, we make sector overarching links to gather knowledge and to learn from each other.</p>
-                                    <p class="col-span-4 sm:col-span-12 res:col-span-12"> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit.</p>
-                                    <p class="col-span-4 sm:col-span-12 res:col-span-12">
-                                        Perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam luptatem quia voluptas sit aspernatur aut odit.</p>
+                                    <p class="col-span-4 sm:col-span-12 res:col-span-12">Ofrecemos una amplia gama de servicios audiovisuales, desde mantenimiento hasta la venta e instalación de equipos de última generación. Cubrimos eventos de cualquier tamaño, desde reuniones pequeñas hasta grandes conferencias, con alquiler de proyectores, sistemas de sonido y suministros adicionales.</p>
+                                    <p class="col-span-4 sm:col-span-12 res:col-span-12">Además, proporcionamos servicios de mantenimiento para universidades, empresas y otras instituciones, garantizando un funcionamiento sin problemas de los equipos. Nos comprometemos a ofrecer soluciones innovadoras y eficientes, con atención personalizada y un equipo altamente capacitado.</p>
+                                    <p class="col-span-4 sm:col-span-12 res:col-span-12">Desde la planificación inicial hasta la ejecución impecable, superamos expectativas y garantizamos el éxito de cada evento. También ofrecemos opciones de venta para aquellos que buscan actualizar su equipamiento audiovisual, con una amplia selección de productos de alta calidad.</p>
                                 </div>
                             </div>
                         </div>
@@ -329,9 +327,9 @@
                     <div class="container">
                         <div class="waiting-title">
                             <div class="the-title text-center">
-                                <h3>We're waiting for You
+                                <h3>Te estamos esperando.
                                     <span class="title-end">.</span></h3>
-                                <a href="contact.html" class="button-basic-1">MAKE RESERVATION</a>
+                                <a href="contact.html" class="button-basic-1">Contáctanos</a>
                             </div>
                         </div>
                     </div>
@@ -342,38 +340,34 @@
             <!-- SECTION  END -->
             <!-- FOOTER START
                 ============================================= -->
-            <footer id="footer" class="footer clearfix">
-                <div class="footer-wrap clearfix">
-                    <div class="footer-bottom clearfix">
-                        <div class="container">
-                            <div class="row">
-                                <div class="foot-col column column-1 text-center clearfix">
-                                    <div class="logo-footer">
-                                        <a href="index.html"><img src="img/dugem-logos.png" alt="Logo-Footer" /></a>
+                <footer id="footer" class="footer clearfix">
+                    <div class="footer-wrap clearfix">
+                        <div class="footer-bottom clearfix">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="foot-col column column-1 text-center clearfix">
+                                        <div class="logo-footer">
+                                            <a href="index.html"><img src="img/logo-white.svg" style="width: 200px;" alt="Logo-Footer" /></a>
+                                        </div>
                                     </div>
-                                </div>
-
-                                <div class="foot-col column column-1 text-center clearfix">
-                                    <div class="social-footer">
-                                        <ul>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-themify-13"></i>Twitter</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-themify-17"></i>Facebook</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-themify-11"></i>Google+</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-social-dribbble"></i>Dribbble</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-behance2"></i>Behance</a></li>
-                                        </ul>
+    
+                                    <div class="foot-col column column-1 text-center clearfix">
+                                        <div class="social-footer">
+                                            <ul>
+                                                <li class="soc-icon"><a target="_blank" href="https://www.instagram.com/video.imagen.sas"><i class="icon icon-themify-25"></i>Instagram</a></li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="foot-col column column-1 text-center clearfix">
-                                    <div id="copyright" class="copyright-text">
-                                        ©Copyright ECONOMIC Todos los derechos reservados.
+                                    <div class="foot-col column column-1 text-center clearfix">
+                                        <div id="copyright" class="copyright-text">
+                                            ©Copyright Video Imagen Todos los derechos reservados.
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </footer>
+                </footer>
             <!-- FOOTER END -->
         </div>
         <!-- MAIN WRAPPER END -->
