--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="css/thaw-flex.css" type="text/css" />
         <link rel="stylesheet" href="css/font.css" type="text/css" />
         <link rel="stylesheet" href="css/fontawesome.min.css" type="text/css" />
-        <link rel="stylesheet" href="css/style.css" type="text/css" />
+        <link rel="stylesheet" href="style.css" type="text/css" />
         <link rel="stylesheet" href="css/responsive.css" type="text/css" />
         <link rel="icon" href="img/fav-icon.png">
         <script>
@@ -102,18 +102,20 @@
                             <div class="the-title text-left col-span-9 sm:col-span-12 res:col-span-12">
                                 <div class="contact-title">
                                     <h5 class="head-title-2 text-white"> 
-                                        / CONTACTUS 
+                                        / Contáctanos
                                     </h5>
                                     <h2 class="head-title-1"> 
-                                        Please do write us
+                                        No dudes en contactarnos
                                     </h2>
-                                    <p class="dugem-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia</p>
+                                    <p class="dugem-text">
+                                        Si tienes alguna duda o necesitas más información, no dudes en contactarnos. Estamos aquí para ayudarte.
+                                    </p>
                                 </div>
                                 <div class="contact-form-style">
-                                    <input type="text" name="your-name" size="40" placeholder="Name">
-                                    <input type="text" name="your-name" size="40" placeholder="Name">
-                                    <textarea name="your-message" cols="40" rows="10" placeholder="Text"></textarea>
-                                    <input type="submit" value="Send" class="button-basic-1">
+                                    <input type="text" name="your-name" size="40" placeholder="Nombre">
+                                    <input type="text" name="your-name" size="40" placeholder="Teléfono">
+                                    <textarea name="Tu mensaje" cols="40" rows="10" placeholder="Text"></textarea>
+                                    <input type="submit" value="Enviar" class="button-basic-1">
 
                                 </div>
                             </div>
@@ -121,58 +123,35 @@
                                 <div class="block-location">
                                     <div class="dugem-text clearfix">
                                         <h3 class="text-white">Our Location</h3>
-                                        <p>Jl. Maleer Indah II, Maleer, Batununggal, Kota Bandung, Jawa Barat 40274</p>
-                                        <p>+0028 55 96 69</p>
+                                        <p>Calle 66b #68b-51 - 302</p>
+                                        <p>+57 322 918 1936</p>
                                     </div>
 
                                 </div>
                                 <div class="block-location">
                                     <div class="dugem-text clearfix">
                                         <h3 class="text-white">Email</h3>
-                                        <p>Jl. Maleer Indah II, Maleer, Batununggal, Kota Bandung, Jawa Barat 40274</p>
-                                        <p>+0028 55 96 69</p>
+                                        <p>contacto@videoimagen.com.co</p>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- CONTACT END -->
-                <!-- TITLE CONTACT -->
+    
                 <div class="big-title">
                     <div class="the-title text-right">
                         <h1>Get In Touch</h1>
                     </div>
                 </div>
-                <!-- TITLE END -->
-                <!-- CONTACT INFO MAPS -->
+     
                 <div class="maps-info-section clearfix">
                     <div class="maps-info-wrap clearfix">
                         <div class="maps-iframe column column-1">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15842.776016949427!2d107.6393476!3d-6.9271322!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x50ce999122e7d8a9!2sZLOOB%20DIGITAL%20KREASI!5e0!3m2!1sid!2sid!4v1610959843725!5m2!1sid!2sid" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.546748062511!2d-74.09276352502079!3d4.674581295300331!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9b0f9ff18f5f%3A0x71eb32b69e2dea33!2sCl.%2066b%20%2368b-51%20302%2C%20Bogot%C3%A1!5e0!3m2!1sen!2sco!4v1715006248412!5m2!1sen!2sco" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                 </div>
-                <!-- CONTACT INFO MAPS END-->
-                <!-- NEWSLETTER -->
-                <div class="news-letter">
-                    <div class="container">
-                        <div class="news-letter-wrap">
-                            <div class="the-title text-center">
-                                <h5 class="text-white">
-                                    Upcoming events and special offers
-                                </h5>
-                                <h3>Get Weekly Newsletter
-                                </h3>
-                            </div>
-                            <div class="contact-form-style clearfix">
-                                <input type="text" name="your-name" size="40" placeholder="Email">
-                                <input type="submit" value="Send" class="button-basic-1">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- NEWSLETTER END -->
             </section>
             <!-- SECTION END -->
             <!-- FOOTER START
@@ -184,24 +163,20 @@
                             <div class="row">
                                 <div class="foot-col column column-1 text-center clearfix">
                                     <div class="logo-footer">
-                                        <a href="index.html"><img src="img/dugem-logos.png" alt="Logo-Footer" /></a>
+                                        <a href="index.html"><img src="img/logo-white.svg" style="width: 200px;" alt="Logo-Footer" /></a>
                                     </div>
                                 </div>
 
                                 <div class="foot-col column column-1 text-center clearfix">
                                     <div class="social-footer">
                                         <ul>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-themify-13"></i>Twitter</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-themify-17"></i>Facebook</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-themify-11"></i>Google+</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-social-dribbble"></i>Dribbble</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-behance2"></i>Behance</a></li>
+                                            <li class="soc-icon"><a target="_blank" href="https://www.instagram.com/video.imagen.sas"><i class="icon icon-themify-25"></i>Instagram</a></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="foot-col column column-1 text-center clearfix">
                                     <div id="copyright" class="copyright-text">
-                                        ©Copyright ECONOMIC Todos los derechos reservados.
+                                        ©Copyright Video Imagen Todos los derechos reservados.
                                     </div>
                                 </div>
                             </div>
