--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/thaw-flex.css" type="text/css" />
         <link rel="stylesheet" href="css/font.css" type="text/css" />
         <link rel="stylesheet" href="css/fontawesome.min.css" type="text/css" />
-        <link rel="stylesheet" href="css/style.css" type="text/css" />
+        <link rel="stylesheet" href="style.css" type="text/css" />
         <link rel="stylesheet" href="css/responsive.css" type="text/css" />
         <link rel="icon" href="img/fav-icon.png">
         <script>
@@ -261,38 +261,34 @@
             <!-- SECTION END -->
             <!-- FOOTER START
                 ============================================= -->
-            <footer id="footer" class="footer clearfix">
-                <div class="footer-wrap clearfix">
-                    <div class="footer-bottom clearfix">
-                        <div class="container">
-                            <div class="row">
-                                <div class="foot-col column column-1 text-center clearfix">
-                                    <div class="logo-footer">
-                                        <a href="index.html"><img src="img/dugem-logos.png" alt="Logo-Footer" /></a>
+                <footer id="footer" class="footer clearfix">
+                    <div class="footer-wrap clearfix">
+                        <div class="footer-bottom clearfix">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="foot-col column column-1 text-center clearfix">
+                                        <div class="logo-footer">
+                                            <a href="index.html"><img src="img/logo-white.svg" style="width: 200px;" alt="Logo-Footer" /></a>
+                                        </div>
                                     </div>
-                                </div>
-
-                                <div class="foot-col column column-1 text-center clearfix">
-                                    <div class="social-footer">
-                                        <ul>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-themify-13"></i>Twitter</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-themify-17"></i>Facebook</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-themify-11"></i>Google+</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-social-dribbble"></i>Dribbble</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-behance2"></i>Behance</a></li>
-                                        </ul>
+    
+                                    <div class="foot-col column column-1 text-center clearfix">
+                                        <div class="social-footer">
+                                            <ul>
+                                                <li class="soc-icon"><a target="_blank" href="https://www.instagram.com/video.imagen.sas"><i class="icon icon-themify-25"></i>Instagram</a></li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="foot-col column column-1 text-center clearfix">
-                                    <div id="copyright" class="copyright-text">
-                                        ©Copyright ECONOMIC Todos los derechos reservados.
+                                    <div class="foot-col column column-1 text-center clearfix">
+                                        <div id="copyright" class="copyright-text">
+                                            ©Copyright Video Imagen Todos los derechos reservados.
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </footer>
+                </footer>
             <!-- FOOTER END -->
         </div>
         <!-- MAIN WRAPPER END -->
