--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="css/thaw-flex.css" type="text/css" />
         <link rel="stylesheet" href="css/font.css" type="text/css" />
         <link rel="stylesheet" href="css/fontawesome.min.css" type="text/css" />
-        <link rel="stylesheet" href="css/style.css" type="text/css" />
+        <link rel="stylesheet" href="style.css" type="text/css" />
         <link rel="stylesheet" href="css/responsive.css" type="text/css" />
         <link rel="icon" href="img/fav-icon.png">
         <script>
@@ -42,17 +42,12 @@
                     <div class="row clearfix">
                         <div class="header-clear clearfix">
                             <div class="header-content-left clearfix">
-                                <!-- LOGO START
-                                ============================================= -->
                                 <div class="logo">
-                                    <a href="index.html"><img src="img/dugem-logos.png" alt="Dugem Logo" /></a>
+                                    <a href="index.html"><img src="img/logo-white.svg" style="width: 250px;" alt="Dugem Logo" /></a>
                                 </div>
-                                <!-- LOGO END -->
                             </div>
                             <div class="header-content-center clearfix">
-                                <!-- NAVIGATION START============================================= -->
                                 <nav class="main-nav">
-                                    <!-- Mobile menu toggle button (hamburger/x icon) -->
                                     <input id="main-menu-state" type="checkbox" />
                                     <label class="main-menu-btn sub-menu-trigger" for="main-menu-state">
                                         <span class="main-menu-btn-icon"></span> Toggle main menu visibility
@@ -106,60 +101,6 @@
                         </video>
                     </div>
                 </div>
-                <!-- MAIN VIDEO BACKGROUND END -->
-                <!-- GlOBAL BLOCK -->
-                <div class="global-block">
-                    <div class="container">
-                        <div class="global-block-wrap grid grid-cols-12 gap-8">
-                            <div class="global-img col-span-5 sm:col-span-12 res:col-span-12">
-                                <div class="item-content">
-                                    <div class="img-header">
-                                        <a class="pattern" href="#">
-                                            <img src="img/event-img.png" alt="event-img">
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="global-counter col-span-7 sm:col-span-12 res:col-span-12">
-                                <div class="global-title">
-                                    <a href="#" class="button-basic-1">Electro</a>
-                                    <h2 data-aos="fade-up">Global Fridays Glow Up 4.20</h2>
-                                    <h5 data-aos="fade-up">/ 26 SEPTEMBER 2021</h5>
-                                    <p class="dugem-text" data-aos="fade-up">Mauris varius porttitor suscipit. Quisque justo tortor, convallis id elit vitae, posuere ullamcorper ante. Sed in magna viverra, fermentum arcu sit amet, porttitor nulla. Vestibulum vestibulum sem neque.</p>
-                                </div>
-                                <div class="global-buy" data-aos="fade-up">
-                                    <a href="single-event.html" class="button-basic-1">View Detail</a>
-                                    <a href="#" class="button-basic-2">Get Ticket</a>
-                                </div>
-                                <div class="global-countdown">
-                                    <div class="event-counter clearfix">
-                                        <div class="countdown">
-                                            <div class="days-count float">
-                                                <h3 id="days"></h3>
-                                                <span>Days</span>
-                                            </div>
-                                            <div class="hours-count float">
-                                                <h3 id="hours"></h3>
-                                                <span>Hours</span>
-                                            </div>
-                                            <div class="minutes-count float">
-                                                <h3 id="minutes"></h3>
-                                                <span>Minutes</span>
-                                            </div>
-                                            <div class="seconds-count float">
-                                                <h3 id="seconds">
-                                                </h3>
-                                                <span>Seconds</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- GlOBAL BLOCK END -->
-                <!-- TABLE EVENTS -->
                 <div class="table-events">
                     <div class="background-overlay"></div>
                     <div class="container">
@@ -610,24 +551,20 @@
                             <div class="row">
                                 <div class="foot-col column column-1 text-center clearfix">
                                     <div class="logo-footer">
-                                        <a href="index.html"><img src="img/dugem-logos.png" alt="Logo-Footer" /></a>
+                                        <a href="index.html"><img src="img/logo-white.svg" style="width: 200px;" alt="Logo-Footer" /></a>
                                     </div>
                                 </div>
 
                                 <div class="foot-col column column-1 text-center clearfix">
                                     <div class="social-footer">
                                         <ul>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-themify-13"></i>Twitter</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-themify-17"></i>Facebook</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-themify-11"></i>Google+</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-social-dribbble"></i>Dribbble</a></li>
-                                            <li class="soc-icon"><a href="#"><i class="icon icon-behance2"></i>Behance</a></li>
+                                            <li class="soc-icon"><a target="_blank" href="https://www.instagram.com/video.imagen.sas"><i class="icon icon-themify-25"></i>Instagram</a></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="foot-col column column-1 text-center clearfix">
                                     <div id="copyright" class="copyright-text">
-                                        ©Copyright ECONOMIC Todos los derechos reservados.
+                                        ©Copyright Video Imagen Todos los derechos reservados.
                                     </div>
                                 </div>
                             </div>
@@ -635,7 +572,6 @@
                     </div>
                 </div>
             </footer>
-            <!-- FOOTER END -->
         </div>
         <!-- MAIN WRAPPER END -->
         <!-- FOOTER SCRIPTS
