Refactor menu links to Spanish language

--- a/about.html
+++ b/about.html
@@ -36,50 +36,32 @@
         <!-- MAIN WRAPPER START
             ============================================= -->
         <div class="main-wrapper clearfix">
-            <!-- HEADER START
-                ============================================= -->
-            <header id="header" class="header-style-1 header-alt">
+            <header id="header" class="header-style-1">
                 <div class="container">
                     <div class="row clearfix">
-
-
                         <div class="header-clear clearfix">
                             <div class="header-content-left clearfix">
-                                <!-- LOGO START
-                                ============================================= -->
                                 <div class="logo">
-                                    <a href="index.html"><img src="img/dugem-logos.png" alt="Dugem Logo" /></a>
+                                    <a href="index.html"><img src="img/logo-white.svg" style="width: 250px;" alt="Dugem Logo" /></a>
                                 </div>
-                                <!-- LOGO END -->
                             </div>
                             <div class="header-content-center clearfix">
-                                <!-- NAVIGATION START============================================= -->
                                 <nav class="main-nav">
-                                    <!-- Mobile menu toggle button (hamburger/x icon) -->
                                     <input id="main-menu-state" type="checkbox" />
                                     <label class="main-menu-btn sub-menu-trigger" for="main-menu-state">
                                         <span class="main-menu-btn-icon"></span> Toggle main menu visibility
                                     </label>
                                     <!-- Sample menu definition -->
                                     <ul id="main-menu" class="sm sm-clean">
-                                        <li class="menu-item"><a href="index.html" class="menu-link">Home</a></li>
-                                        <li class="menu-item"><a href="about.html" class="menu-link active">About</a></li>
-                                        <li class="menu-item"><a href="event.html" class="menu-link">Event</a></li>
-                                        <li class="menu-item"><a href="blog.html" class="menu-link">News</a></li>
-                                        <li class="menu-item"><a href="contact.html" class="menu-link">Contact</a></li>
+                                        <li class="menu-item"><a href="index.html" class="menu-link ">Inicio</a></li>
+                                        <li class="menu-item"><a href="about.html" class="menu-link active">Sobre nosotros</a></li>
+                                        <li class="menu-item"><a href="event.html" class="menu-link">Servicios</a></li>
+                                        <li class="menu-item"><a href="contact.html" class="menu-link">Contacto</a></li>
                                     </ul>
                                 </nav>
                                 <!-- NAVIGATION END -->
                             </div>
-                            <div class="header-content-right">
-                                <div class="header-info head-item clearfix">
-                                    <div class="info-wrap">
-                                        <div class="search-wrap">
-                                            <button id="btn-search" class="btn btn--search"><i class="icon-simple-line-icons-143"></i></button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                         
                             <div class="search">
                                 <button id="btn-search-close" class="btn--search-close"><i class="icon-themify-1"></i></button>
                                 <form class="search__form">
@@ -91,8 +73,10 @@
                     </div>
                 </div>
             </header>
-            <!-- HEADER END -->
-            <!-- SECTION -->
+            <br>
+            <br>
+            <br>
+            <br>
             <section class="content">
                 <!-- PAGE TITLE  -->
                 <div class="about-page">
