--- a/index.html
+++ b/index.html
@@ -54,24 +54,15 @@
                                     </label>
                                     <!-- Sample menu definition -->
                                     <ul id="main-menu" class="sm sm-clean">
-                                        <li class="menu-item"><a href="index.html" class="menu-link active">Home</a></li>
-                                        <li class="menu-item"><a href="about.html" class="menu-link">About</a></li>
-                                        <li class="menu-item"><a href="event.html" class="menu-link">Event</a></li>
-                                        <li class="menu-item"><a href="blog.html" class="menu-link">News</a></li>
-                                        <li class="menu-item"><a href="contact.html" class="menu-link">Contact</a></li>
+                                        <li class="menu-item"><a href="index.html" class="menu-link active">Inicio</a></li>
+                                        <li class="menu-item"><a href="about.html" class="menu-link">Sobre nosotros</a></li>
+                                        <li class="menu-item"><a href="event.html" class="menu-link">Servicios</a></li>
+                                        <li class="menu-item"><a href="contact.html" class="menu-link">Contacto</a></li>
                                     </ul>
                                 </nav>
                                 <!-- NAVIGATION END -->
                             </div>
-                            <div class="header-content-right">
-                                <div class="header-info head-item clearfix">
-                                    <div class="info-wrap">
-                                        <div class="search-wrap">
-                                            <button id="btn-search" class="btn btn--search"><i class="icon-simple-line-icons-143"></i></button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                         
                             <div class="search">
                                 <button id="btn-search-close" class="btn--search-close"><i class="icon-themify-1"></i></button>
                                 <form class="search__form">
