Refactor client about section and update contact form text

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             </header>
             <!-- HEADER END -->
             <!-- SECTION -->
+          
             <section class="content">
                 <!-- MAIN VIDEO BACKGROUND -->
                 <div class="main-video">
@@ -291,6 +292,44 @@
 
                     </div>
                 </div>
+                <div class="client-about">
+                    <div class="container">
+                        <div class="client-wrap grid grid-cols-12 gap-10">
+                            <div class="the-title text-left col-span-4 sm:col-span-2 res:col-span-12">
+                                <h5 class="head-title-2" data-aos="fade-up"> /PARTNERS </h5>
+                                <h2 class="head-title-1"> Social Channels & Sponsors
+                                    <span class="title-end">.</span></h2>
+                            </div>
+                            <div class="client-inner-content col-span-8 sm:col-span-12 res:col-span-12 grid grid-cols-6">
+                                <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
+                                    <a href="#">
+                                        <img src="img/client.-1.png" alt="client-1">
+                                    </a>
+                                </div>
+                                <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
+                                    <a href="#">
+                                        <img src="img/client.-2.png" alt="client-2">
+                                    </a>
+                                </div>
+                                <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
+                                    <a href="#">
+                                        <img src="img/client.-3.png" alt="client-3">
+                                    </a>
+                                </div>
+                                <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
+                                    <a href="#">
+                                        <img src="img/client.-4.png" alt="client-4">
+                                    </a>
+                                </div>
+                                <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
+                                    <a href="#">
+                                        <img src="img/client.-5.png" alt="client-5">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <!-- TABLE EVENTS END -->
                 <!-- BLOG LOOP -->
                 <div class="blog-loop">
@@ -448,9 +487,9 @@
                     <div class="testimonial-background"></div>
                     <div class="testimonial-wrap">
                         <div class="the-title text-center">
-                            <h5 class="head-title-2"> / TESTIMONIAL </h5>
+                            <h5 class="head-title-2"> / Tesimonios </h5>
                             <h2 class="head-title-1">
-                                From Great Our Clients
+                                ¿Qué dicen nuestros clientes?
                                 <span class="title-end">.</span>
                             </h2>
                         </div>
@@ -515,10 +554,12 @@
                     <div class="container">
                         <div class="book-wrap news-title grid grid-cols-12 gap-24">
                             <div class="the-title col-span-6 sm:col-span-12 res:col-span-12">
-                                <h5 class="head-title-2"> / RESERVATION </h5>
-                                <h2 class="head-title-1"> Book A Table Now
-                                    <span class="title-end">.</span></h2>
-                                <p class="dugem-text"> Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor. Sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. </p>
+                                <h5 class="head-title-2"> / Contacto </h5>
+                                <h2 class="head-title-1"> Escribemos para atenderte
+                               </h2>
+                                <p class="dugem-text"> 
+                                    ¿Tienes alguna duda o sugerencia? Escríbenos y te responderemos lo más pronto posible.
+                                     </p>
                             </div>
                             <div class="contact-form-style col-span-6 sm:col-span-12 res:col-span-12">
                                 <input type="text" name="your-name" size="40" placeholder="Name">
@@ -532,6 +573,7 @@
                 </div>
                 <!-- BOOK TABLE END -->
             </section>
+            
             <!-- SECTION END -->
             <!-- FOOTER START
                 ============================================= -->
