Update page titles to Spanish language

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
         <!-- DOCUMENT TITLES
             ============================================= -->
-        <title>About | Dugem HTML Themes</title>
+        <title>Sobre nosotros | Video Imagen</title>
     </head>
 
     <body class="demo-1">
