--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
         <!-- DOCUMENT TITLES
             ============================================= -->
-        <title>Contact | Dugem HTML Themes</title>
+        <title>Contacto | Video Imagen</title>
     </head>
 
     <body class="demo-1">
