--- a/event.html
+++ b/event.html
@@ -27,7 +27,7 @@
 
     <!-- DOCUMENT TITLES
             ============================================= -->
-    <title>Blog - Dugem HTML Themes</title>
+    <title>Servicios | Video Imagen</title>
 </head>
 
 <body class="demo-1">
