--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- DOCUMENT TITLES
             ============================================= -->
-        <title>Dugem | Dugem HTML Themes</title>
+        <title>Inicio | Video Imagen</title>
     </head>
 
     <body class="demo-1">
