--- a/index.html
+++ b/index.html
@@ -296,34 +296,44 @@
                     <div class="container">
                         <div class="client-wrap grid grid-cols-12 gap-10">
                             <div class="the-title text-left col-span-4 sm:col-span-2 res:col-span-12">
-                                <h5 class="head-title-2" data-aos="fade-up"> /PARTNERS </h5>
-                                <h2 class="head-title-1"> Social Channels & Sponsors
+                                <h5 class="head-title-2" data-aos="fade-up"> /Empresas </h5>
+                                <h2 class="head-title-1"> Empresas con las que hemos trabajado
                                     <span class="title-end">.</span></h2>
                             </div>
                             <div class="client-inner-content col-span-8 sm:col-span-12 res:col-span-12 grid grid-cols-6">
                                 <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
                                     <a href="#">
-                                        <img src="img/client.-1.png" alt="client-1">
+                                        <img style="height: 200px; object-fit: contain;" src="img/logo_company/1.png" alt="client-1">
                                     </a>
                                 </div>
                                 <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
                                     <a href="#">
-                                        <img src="img/client.-2.png" alt="client-2">
+                                        <img style="height: 200px; object-fit: contain;" src="img/logo_company/2.png" alt="client-2">
                                     </a>
                                 </div>
                                 <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
                                     <a href="#">
-                                        <img src="img/client.-3.png" alt="client-3">
+                                        <img style="height: 200px; object-fit: contain;" src="img/logo_company/3.png" alt="client-3">
                                     </a>
                                 </div>
                                 <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
                                     <a href="#">
-                                        <img src="img/client.-4.png" alt="client-4">
+                                        <img style="height: 200px; object-fit: contain;" src="img/logo_company/4.png" alt="client-4">
                                     </a>
                                 </div>
                                 <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
                                     <a href="#">
-                                        <img src="img/client.-5.png" alt="client-5">
+                                        <img style="height: 200px; object-fit: contain;" src="img/logo_company/5.png" alt="client-5">
+                                    </a>
+                                </div>
+                                <!-- <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
+                                    <a href="#">
+                                        <img style="height: 200px; object-fit: contain;" src="img/logo_company/6.png" alt="client-5">
+                                    </a>
+                                </div> -->
+                                <div class="client-content col-span-2 sm:col-span-6 res:col-span-6">
+                                    <a href="#">
+                                        <img style="height: 200px; object-fit: contain;" src="img/logo_company/7.png" alt="client-5">
                                     </a>
                                 </div>
                             </div>
