--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="css/fontawesome.min.css" type="text/css" />
         <link rel="stylesheet" href="style.css" type="text/css" />
         <link rel="stylesheet" href="css/responsive.css" type="text/css" />
-        <link rel="icon" href="img/fav-icon.png">
+        <link rel="icon" href="img/logo.png">
         <script>
             document.documentElement.className = 'js';
 
