Refactor image paths for about gallery

--- a/about.html
+++ b/about.html
@@ -105,10 +105,10 @@
                 <div id="lightgallery" class="about-gallery clearfix">
                     <div class="gallery clearfix">
                         <div class="gallery-block-wrap grid grid-cols-12 gap-10">
-                            <div data-src="img/about-gallery-1.png" class="column-gallery col-span-4 sm:col-span-6 res:col-span-6">
+                            <div data-src="img/gallery/1.jpg" class="column-gallery col-span-4 sm:col-span-6 res:col-span-6">
                                 <div class="item-wrap">
                                     <figure class="imghvr-circle-top-left">
-                                        <img src="img/about-gallery-1.png" alt="gallery-pesta-1">
+                                        <img style="height: 350px; object-fit: cover; width: 100%;" src="img/gallery/1.jpg" alt="gallery-pesta-1">
                                         <figcaption>
                                             <div class="caption-inside">
                                                 <div class="gallery-icon">
@@ -119,10 +119,10 @@
                                     </figure>
                                 </div>
                             </div>
-                            <div data-src="img/about-gallery-2.png" class="column-gallery col-span-4 sm:col-span-6 res:col-span-6">
+                            <div data-src="img/gallery/2.jpg" class="column-gallery col-span-4 sm:col-span-6 res:col-span-6">
                                 <div class="item-wrap">
                                     <figure class="imghvr-circle-top-left">
-                                        <img src="img/about-gallery-2.png" alt="gallery-pesta-2">
+                                        <img style="height: 350px; object-fit: cover; width: 100%;" src="img/gallery/2.jpg" alt="gallery-pesta-2">
                                         <figcaption>
                                             <div class="caption-inside">
                                                 <div class="gallery-icon">
@@ -133,10 +133,10 @@
                                     </figure>
                                 </div>
                             </div>
-                            <div data-src="img/about-gallery-3.png" class="column-gallery col-span-4 sm:col-span-6 res:col-span-6">
+                            <div data-src="img/gallery/3.jpg" class="column-gallery col-span-4 sm:col-span-6 res:col-span-6">
                                 <div class="item-wrap">
                                     <figure class="imghvr-circle-top-left">
-                                        <img src="img/about-gallery-3.png" alt="gallery-pesta-3">
+                                        <img style="height: 350px; object-fit: cover; width: 100%;" src="img/gallery/3.jpg" alt="gallery-pesta-3">
                                         <figcaption>
                                             <div class="caption-inside">
                                                 <div class="gallery-icon">
@@ -147,10 +147,10 @@
                                     </figure>
                                 </div>
                             </div>
-                            <div data-src="img/about-gallery-4.png" class="column-gallery col-span-4 sm:col-span-6 res:col-span-6">
+                            <div data-src="img/gallery/4.jpg" class="column-gallery col-span-4 sm:col-span-6 res:col-span-6">
                                 <div class="item-wrap">
                                     <figure class="imghvr-circle-top-left">
-                                        <img src="img/about-gallery-4.png" alt="gallery-pesta-4">
+                                        <img style="height: 350px; object-fit: cover; width: 100%;" src="img/gallery/4.jpg" alt="gallery-pesta-4">
                                         <figcaption>
                                             <div class="caption-inside">
                                                 <div class="gallery-icon">
@@ -161,10 +161,10 @@
                                     </figure>
                                 </div>
                             </div>
-                            <div data-src="img/about-gallery-5.png" class="column-gallery col-span-4 sm:col-span-6 res:col-span-6">
+                            <div data-src="img/gallery/5.jpg" class="column-gallery col-span-4 sm:col-span-6 res:col-span-6">
                                 <div class="item-wrap">
                                     <figure class="imghvr-circle-top-left">
-                                        <img src="img/about-gallery-5.png" alt="gallery-pesta-5">
+                                        <img style="height: 350px; object-fit: cover; width: 100%;" src="img/gallery/5.jpg" alt="gallery-pesta-5">
                                         <figcaption>
                                             <div class="caption-inside">
                                                 <div class="gallery-icon">
@@ -175,10 +175,10 @@
                                     </figure>
                                 </div>
                             </div>
-                            <div data-src="img/about-gallery-6.png" class="column-gallery col-span-4 sm:col-span-6 res:col-span-6">
+                            <div data-src="img/gallery/6.jpg" class="column-gallery col-span-4 sm:col-span-6 res:col-span-6">
                                 <div class="item-wrap">
                                     <figure class="imghvr-circle-top-left">
-                                        <img src="img/about-gallery-6.png" alt="gallery-pesta-6">
+                                        <img style="height: 350px; object-fit: cover; width: 100%;" src="img/gallery/6.jpg" alt="gallery-pesta-6">
                                         <figcaption>
                                             <div class="caption-inside">
                                                 <div class="gallery-icon">
